[package]
name = "hyperlight-gh-bot"
version = "0.1.0"
edition = "2021"
description = "GitHub bot that posts benchmark results as PR comments."

[dependencies]
axum = "0.8"
octocrab = "0.44"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
