[package]
name = "hyperlight-gh-bot"
version = "0.1.0"
edition = "2021"
description = "GitHub App bot that posts workflow artifact content as PR comments."

[dependencies]
axum = "0.8"
octocrab = "0.44"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
http-body-util = "0.1.3"
